Stop capturing events for select-to-speak if the search key was simply tapped.

Bug: 792557
Change-Id: Ic1ae08f42822a54707b76bcfd54b450f9ef04008
Reviewed-on: https://chromium-review.googlesource.com/815538
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Katie D <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523133}
Former-commit-id: 679ae71a87843a998741af5e258ab5ac22a22ba4